<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AHORRO LIBRE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login_facebook">Connect with Facebook</string>
    <string name="btn_login_gplus">Connect with Google</string>
    <string name="btn_txt_login">Log in now!</string>
    <string name="question_have_account">Already have an email account?</string>
    <string name="btn_register_email">Connect with Email</string>
    <string name="welcome">Welcome to</string>
    <string name="login">Credentials</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="prompt_recover_password_instruction">Specify your email address and your password will be sent to you</string>
    <string name="recover_password_confirmation">Your password has been sent to your email</string>
    <string name="btn_recover_password">Recover</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_name">Name(s)</string>
    <string name="hint_last_name">Last Names</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="account_information">Account information</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!-- Navigation drawer -->
    <string name="section_my_savings">My Savings</string>
    <string name="section_my_friends">My Friends</string>
    <string name="section_my_history">My History</string>
    <string name="section_account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_does_it_work">¿How does it work?</string>
    <string name="privacy_terms">Terms and privacy</string>
    <string name="logout">Log out</string>
    <string name="action_new">New saving</string>
    <string name="title_activity_new_savings">NewSavingsActivity</string>
    <string name="header_step1">1. Create goal</string>
    <string name="header_goal">I want to get:</string>
    <string name="header_payment_amount">¿Payment amount?</string>
    <string name="header_timing">Payment timing</string>
    <string name="header_people">¿How many people?</string>
    <string name="next">Next</string>

</resources>
