<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/bg_login"
            android:scaleType="centerCrop"
            android:id="@+id/imageView2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/login_filter"
        android:gravity="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white"
                    android:id="@+id/btn_login_facebook"
                    android:src="@drawable/ic_login_facebook" />

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:id="@+id/btn_login_email"
                    android:src="@drawable/ic_login_email"
                    android:layout_marginBottom="50dp" />

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white"
                    android:id="@+id/btn_login_google"
                    android:src="@drawable/ic_login_google"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/question_have_account"
                    android:id="@+id/txt_have_account"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/btn_txt_login"
                    android:textColor="@android:color/white"
                    android:id="@+id/btn_txt_login_now"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:gravity="top"
        android:layout_marginTop="80dp"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/txt_app_name" />
    </LinearLayout>

</FrameLayout>
